# cryojax

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: release.yml
.github/workflows/: build_docs.yml  ci_build.yml  lint.yml  release.yml  ruff.yml  testing.yml
api/atom_util/: index.html
api/jax_util/: index.html
cryojax/atom_util/: _element_utils.py
cryojax/constants/: __init__.py  _physical_constants.py  _scattering_factor_parameters.py
cryojax/io/: __init__.py  _mrc.py
cryojax/ndimage/: __init__.py  _downsample.py  _fourier_utils.py  _map_coordinates.py
cryojax/simulator/: __init__.py  _api_utils.py  _image_config.py  _pose.py  _solvent_2d.py
docs/: index.md
docs/examples/: benchmark.py  benchmark_projection_method_tradeoff.py  compute-potential.ipynb  extending-cryojax.ipynb  jax-transformations.ipynb  multislice.ipynb  read-dataset.ipynb  simulate-image-benchmark.py  simulate-image.ipynb  simulate-relion-dataset.ipynb  structure-refinement.ipynb
examples/compute-potential/: index.html
examples/cross-correlation-search/: index.html
examples/ewald-sphere/: index.html
examples/extending-cryojax/: index.html
examples/jax-transformations/: index.html
examples/multislice/: index.html
examples/read-dataset/: index.html
examples/simulate-image/: index.html
examples/simulate-micrograph/: index.html
examples/simulate-relion-dataset/: index.html
examples/simulating-and-reweighting-ensembles/: index.html
tests/: conftest.py  test_agree_with_cistem.py  test_atom_potential.py  test_atom_util.py  test_deprecation.py  test_detector.py  test_direct_integrators.py  test_distributions.py  test_ensemble_parametrisations.py  test_feature.py  test_fourier_statistics.py  test_image_model.py  test_image_shape.py  test_misc_functions.py  test_noise_model.py  test_pdb_reader.py  test_projection_methods.py  test_relion_data.py  test_relion_dataset.py  test_scattering_theories.py  test_structural_ensemble.py  test_structure_mapping.py  test_structure_parameterisations.py  test_structure_representations.py  test_transforms.py  test_volume_integrators.py  test_volume_parametrisations.py  test_volume_representations.py  test_voxel_potential.py
(+221 files in other folders)
