[project]
name = "cryojax"
description = "Cryo-EM image simulation and analysis powered by JAX"
authors = [{ name = "Michael O'Brien", email = "michaelobrien@g.harvard.edu" }]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["jax", "equinox", "cryo-EM", "electron-microscopy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
urls = {repository = "https://github.com/michael-0brien/cryojax" }
dynamic = ["version"]
dependencies = [
    "jax",
    "jaxlib",
    "equinox>=0.11.0",
    "jaxtyping>=0.2.23",
    "lineax",
    "mrcfile",
    "starfile",
    "pandas",
    "xarray",
    "typing_extensions>=4.5.0",
    "tqdm",
    "mdtraj",
]

[project.optional-dependencies]
dev = [
    "pre-commit"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "mkdocstrings-python",
    "mknotebooks",
    "mkdocs-gen-files",
    "mkdocs-same-dir",
    "mkdocs-pymdownx-material-extras",
    "mkdocs-autorefs",
    "mkdocs-simple-plugin"
]
tests = [
    "pytest",
    "pytest-cov",
    "pycistem; sys_platform == 'linux' and python_version < '3.12'",
    "typeguard==2.13.3"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "cryojax/cryojax_version.py"

[tool.ruff]
exclude = ["old"]
extend-include = ["*.ipynb"]
lint.fixable = ["I001", "F401"]
line-length = 90
lint.ignore = ["E402", "E721", "E731", "E741", "F722"]
lint.select = ["E", "F", "I001"]
src = []

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = true

[tool.black]
line-length = 90

[tool.pyright]
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
include = ["cryojax", "tests"]
